--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,6 @@
-div.container {margin-top: 50px}
+div.container {margin-top: 30px}
 div.panel-heading {color: #004085; font-size: 200%}
-th {font-size: large; text-align: center}
+p.other {color: #004085; font-size: 120%}
+th  {font-size: large; text-align: center}
 td {font-size: 100%; text-align: center}
 select.form-control { padding: 5px; }
